# docstring-auto-filler

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  test_sample.py
.github/workflows/: ci.yml
docfiller/: __init__.py  cli.py  extractor.py  filler.py  generator.py
docs/: index.html
tests/: test_docfiller.py
